# AudioAnalyser

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  FINAL_PERFORMANCE_SUMMARY.md  MEMORY_FIX_SUMMARY.md  NEXT_LEVEL_OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REVIEW.md  PHASE3_OPTIMIZATION_SUMMARY.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  benchmark_performance.py  check_channel_mapping.py  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_config_simple.py
.cursor/rules/: coding-standards.mdc  documentation-standards.mdc  music-analysis.mdc  testing-practices.mdc  version-control.mdc  virtual-environment.mdc
analysis/Allegro maestoso/: analysis_results.csv
analysis/Californication/: analysis_results.csv
analysis_advanced_stats/Fragments of Time - Instrumental 40sec/: analysis_results.csv
analysis_complete_csv/Fragments of Time - Instrumental 40sec/: analysis_results.csv
analysis_fixed_crest_factor/Fragments of Time - Instrumental 40sec/: analysis_results.csv
analysis_fixed_y_axis/Fragments of Time/: analysis_results.csv
analysis_fixed_y_axis/Fragments of Time - Instrumental 40sec/: analysis_results.csv
analysis_music_tagging/Fragments of Time/: analysis_results.csv
docs/: analysis_result_bundle.md  musicanalyser.m  performance_notes.md  processing_pipeline_report_instructions.md  windows_gui_packaging.md
packaging/: audio-analyser-gui.spec  build_windows_gui.ps1  write_build_info.py
proofs/: README.md
reports/: processing_pipeline.md
src/: __init__.py  audio_processor.py  channel_mapping.py  config.py  data_export.py  envelope_analyzer.py  generate_reports.py  main.py  music_analyzer.py  octave_filter.py  plotting_utils.py  render.py  report_generator.py  report_pdf.py  signal_metrics.py  time_domain_metrics.py  track_processor.py  version_info.py  visualization.py
src/gui/: __init__.py  (+8 more)
tests/: README.md  __init__.py  test_audio_processor.py  test_channel_mapping.py  test_channel_mapping_extended.py  test_config_extended.py  test_data_export.py  test_envelope_analyzer.py  test_envelope_methods.py  test_envelope_real_audio.py  test_envelope_sustained_peaks.py  test_filterbank_response.py  test_gui_about.py  test_gui_assets.py  test_gui_commands.py  test_gui_progress.py  test_low_freq_bands.py  test_main.py  test_main_extended.py  test_mkv_support.py  test_music_analyzer.py  test_normalization_effect.py  test_octave_band_quality.py  test_octave_filter.py  test_octave_filter_extended.py  test_octave_phase_response.py  test_peak_envelope.py  test_pipeline_synthetic_accuracy.py  test_report_generator.py  test_results_bundle.py  test_results_render.py  test_signal_metrics.py  test_simple.py  test_time_domain_crest_factor_modes.py  test_track_processor.py  test_version_info.py  test_visualization.py  verify_iso_octave_bands.py
(+59 files in other folders)
